--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.274.0",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
