--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.274.0",
@@ -39,6 +40,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-paginate": "^8.2.0",
